[package]
edition = "2021"
name = "game-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"]}
axum = "0.5.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0"
log = "0.4.17"
env_logger = { version = "0.9.1"}
uuid = { version = "1.2.0", features = ["serde"]}